--- a/res/layout/call_detail_history_item.xml
+++ b/res/layout/call_detail_history_item.xml
@@ -45,6 +45,14 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/secondary_text_color"
         />
+        <TextView
+            android:id="@+id/call_subscription_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/call_log_icon_margin"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/secondary_text_color"
+        />
     </LinearLayout>
     <TextView
         android:id="@+id/date"
